# realtime-ml-drift

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  drift_metrics.json  pyproject.toml  requirements.txt
artifacts/: drift_cpu_profile.json  final_metrics.json  live_run_summary.json
configs/: base.yaml  benchmark.yaml  dev.yaml  drift.yaml  logging.yaml  prod.yaml
data/: README.md
docs/: architecture.md  benchmark_report.md  ci_troubleshooting.md  decisions.md  demo.md  drift_strategy.md  evaluation_results.md  failure_cases.md  perf_profile.md  production_gap_audit.md  runbook.md  security.md  soak_report.md  tradeoffs.md
evaluation/: alert_metrics.py  drift_detection.py  evaluate.py  latency_throughput.py  measure_resume_metrics.py  model_decay.py
experiments/: README.md
frontend/: index.html
scripts/: __init__.py  benchmark.py  benchmark_api.py  benchmark_service_e2e.py  evaluate_live_run.py  evaluate_realtime_drift.py  generate_stream.py  generate_stream_phases.py  profile_drift_cpu.py  run_all.py  run_api.py  run_eval.py  run_stream.py  soak_test.py  sweep_drift_thresholds.py
src/: __main__.py
tests/: test_api_admin.py  test_batch_processing.py  test_benchmark_integrity.py  test_benchmark_profile.py  test_benchmarking_metrics.py  test_drift_monitor_periodic.py  test_drift_monitor_pipeline.py  test_drift_stats.py  test_generate_stream_phases.py  test_kafka_source.py  test_live_evaluation.py  test_production_runtime.py  test_soak_test.py  test_threshold_controller.py  (+1 more)
(+106 files in other folders)
