[project]
name = "realtime-ml-drift"
version = "0.1.0"
requires-python = ">=3.11,<3.12"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    "ignore::DeprecationWarning:src\\.api\\.app",
    "ignore::DeprecationWarning:fastapi\\.applications",
]
